@@ -4,6 +4,7 @@ Supported Presently
 
 Changelog for 1.3.21
 * Added a default numberformat in Form.pm (Chris T)
+* Added a container div for theming saved and/or posted docs (Chris T)
 
 Changelog for 1.3.20
 * Fixes for es_AR translation, duplicate keys removed (Andres B)
